[package]
name = "limitless_0613"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
limitless-exchange-rust-sdk = "1.0.10"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
alloy = { version = "1", features = ["full"] }
